代码整理和优化